--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -36,7 +36,13 @@
     "svelte": "^5.0.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
+    "@lucide/svelte": "^0.525.0",
     "@playwright/test": "^1.49.1",
+    "@storybook/addon-a11y": "^9.0.14",
+    "@storybook/addon-docs": "^9.0.14",
+    "@storybook/addon-svelte-csf": "^5.0.4",
+    "@storybook/addon-vitest": "^9.0.14",
     "@storybook/svelte-vite": "^9.0.14",
     "@storybook/sveltekit": "^9.0.14",
     "@sveltejs/adapter-vercel": "^5.6.3",
@@ -47,23 +53,22 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
     "@vitest/browser": "^3.2.3",
+    "clsx": "^2.1.1",
     "mdsvex": "^0.12.3",
     "playwright": "^1.53.0",
     "publint": "^0.3.2",
+    "storybook": "^9.0.14",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.0.0",
     "vite": "^6.2.6",
     "vite-plugin-devtools-json": "^0.2.0",
     "vitest": "^3.2.3",
-    "vitest-browser-svelte": "^0.1.0",
-    "storybook": "^9.0.14",
-    "@storybook/addon-svelte-csf": "^5.0.4",
-    "@chromatic-com/storybook": "^4.0.1",
-    "@storybook/addon-docs": "^9.0.14",
-    "@storybook/addon-a11y": "^9.0.14",
-    "@storybook/addon-vitest": "^9.0.14"
+    "vitest-browser-svelte": "^0.1.0"
   },
   "keywords": [
     "svelte"
