--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -82,6 +82,7 @@
     "svelte"
   ],
   "dependencies": {
-    "@inlang/paraglide-js": "^2.0.0"
+    "@inlang/paraglide-js": "^2.0.0",
+    "lucide-svelte": "^0.525.0"
   }
 }
