fix light, dark theme

--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-a11y": "^9.0.14",
     "@storybook/addon-docs": "^9.0.14",
     "@storybook/addon-svelte-csf": "^5.0.4",
+    "@storybook/addon-themes": "^9.0.14",
     "@storybook/addon-vitest": "^9.0.14",
     "@storybook/svelte-vite": "^9.0.14",
     "@storybook/sveltekit": "^9.0.14",
