save test results - playwrite and vitest

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -5,11 +5,16 @@ on:
     branches: [main]
     paths:
       - "packages/**"
+  pull_request:
+    branches: [main]
+    paths:
+      - "packages/**"
 
 permissions:
   contents: read
   pages: write
   id-token: write
+  pull-requests: write
 
 concurrency:
   group: "pages"
@@ -43,22 +48,61 @@ jobs:
           cd packages/ai-ui-kit
           npx playwright install --with-deps
 
-      - name: Run tests
+      - name: Run Vitest tests with coverage
         run: |
           cd packages/ai-ui-kit
-          npm run test
+          npm run test:unit -- --run --coverage
+
+      - name: Run Playwright tests
+        run: |
+          cd packages/ai-ui-kit
+          npm run test:e2e
+
+      - name: Upload Playwright HTML Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: packages/ai-ui-kit/playwright-report/
+          retention-days: 30
+
+      - name: Upload Vitest Coverage Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: vitest-coverage
+          path: packages/ai-ui-kit/coverage/
+          retention-days: 30
+
+      - name: Vitest Coverage Report
+        uses: davelosert/vitest-coverage-report-action@v2.8.3
+        if: github.event_name == 'pull_request'
+        with:
+          working-directory: packages/ai-ui-kit
+          json-summary-path: coverage/coverage-summary.json
+          json-final-path: coverage/coverage-final.json
+
+      - name: Playwright Report Summary
+        uses: daun/playwright-report-summary@v3
+        if: always() && github.event_name == 'pull_request'
+        with:
+          report-file: packages/ai-ui-kit/playwright-results.json
+          comment-title: "Playwright Test Results"
 
       - name: Build Storybook
+        if: github.ref == 'refs/heads/main'
         run: |
           cd packages/ai-ui-kit
           npm run build-storybook
 
       - name: Upload artifact
+        if: github.ref == 'refs/heads/main'
         uses: actions/upload-pages-artifact@v3
         with:
           path: packages/ai-ui-kit/storybook-static
 
   deploy:
+    if: github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
