fix dependency and config

--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -56,6 +56,8 @@
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/table-core": "^8.21.3",
     "@vitest/browser": "^3.2.3",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "bits-ui": "^2.8.10",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.6.0",
