--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -55,6 +55,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/table-core": "^8.21.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/svelte": "^5.2.8",
     "@vitest/browser": "^3.2.3",
     "bits-ui": "^2.8.10",
     "clsx": "^2.1.1",
@@ -84,6 +86,7 @@
   ],
   "dependencies": {
     "@inlang/paraglide-js": "^2.0.0",
-    "lucide-svelte": "^0.525.0"
+    "lucide-svelte": "^0.525.0",
+    "zod": "^3.25.67"
   }
 }
