--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "@inlang/paraglide-js": "^2.0.0",
     "lucide-svelte": "^0.525.0",
+    "svelte-dnd-action": "^0.9.63",
     "zod": "^3.25.67"
   }
 }
