wip knowledge graph

--- a/packages/ai-ui-kit/package.json
+++ b/packages/ai-ui-kit/package.json
@@ -88,6 +88,12 @@
   ],
   "dependencies": {
     "@inlang/paraglide-js": "^2.0.0",
+    "@types/cytoscape": "^3.21.9",
+    "cytoscape": "^3.32.0",
+    "cytoscape-cola": "^2.5.1",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-fcose": "^2.2.0",
     "lucide-svelte": "^0.525.0",
     "svelte-dnd-action": "^0.9.63",
     "zod": "^3.25.67"
